--- a/index.html
+++ b/index.html
@@ -5,9 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>skyhighadventures</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+
+    <header>
+        <nav class="navbar navbar-expand-lg bg-success text-light p-3">
+            <div class="container-fluid d-flex justify-content-between align-items-center">
+
+                <a class="navbar-brand text-light d-flex align-items-center" href="#">
+                    <img src="/images/mountain-solid.svg" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
+                    <div class="ms-2 d-flex flex-column">
+                        <span>SKYHIGH</span>
+                        <span>ADVENTURES</span>
+                    </div>
+                </a>
+
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active text-light" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link text-light" href="#">DEALS</a>
+                        <a class="nav-link text-light" href="#">ADVENTURES</a>
+                        <a class="nav-link text-light" href="#">BLOG</a>
+                        <a class="nav-link text-light" href="#">ABOUT</a>
+                        <a class="nav-link text-light" href="#">CONTACT</a>
+                    </div>
+                </div>
+
+                <div class="d-none d-lg-flex align-items-center">
+                    <a href="mailto:contact@skyhighadventures.com" class="btn me-2">
+                        <img src="/images/envelope-regular.svg" alt="Contact" width="40" height="40">
+                    </a>
+                    <a href="#search" class="btn me-2">
+                        <img src="/images/magnifying-glass-solid.svg" alt="Search" width="40" height="40">
+                    </a>
+                    <button type="button" class="btn border-white text-white">BOOK NOW</button>
+                </div>
+
+                <div class="d-lg-none d-flex align-items-center">
+                    <button type="button" class="btn border-white text-white me-2">BOOK NOW</button>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
