--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container-fluid d-flex justify-content-between align-items-center">
 
                 <a class="navbar-brand text-light d-flex align-items-center" href="#">
-                    <img src="/dsn1713-skyhighadventures/images/mountain-solid.svg" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
+                    <img src="/dsn1713-skyhighadventures/images/mountain-solid.jpg" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
                     <div class="ms-2 d-flex flex-column">
                         <span>SKYHIGH</span>
                         <span>ADVENTURES</span>
@@ -34,10 +34,10 @@
 
                 <div class="d-none d-lg-flex align-items-center">
                     <a href="mailto:contact@skyhighadventures.com" class="btn me-2">
-                        <img src="/dsn1713-skyhighadventures/images/envelope-regular.svg" alt="Contact" width="40" height="40">
+                        <img src="/dsn1713-skyhighadventures/images/envelope-regular.png" alt="Contact" width="40" height="40">
                     </a>
                     <a href="#search" class="btn me-2">
-                        <img src="/dsn1713-skyhighadventures/images/magnifying-glass-solid.svg" alt="Search" width="40" height="40">
+                        <img src="/dsn1713-skyhighadventures/images/magnifying-glass-solid.png" alt="Search" width="40" height="40">
                     </a>
                     <button type="button" class="btn border-white text-white">BOOK NOW</button>
                 </div>
