--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container-fluid d-flex justify-content-between align-items-center">
 
                 <a class="navbar-brand text-light d-flex align-items-center" href="#">
-                    <img src="/dsn1713-skyhighadventures/images/mountain-solid.jpg" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
+                    <img src="images/mountain-solid 11.54.03 AM.svg" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
                     <div class="ms-2 d-flex flex-column">
                         <span>SKYHIGH</span>
                         <span>ADVENTURES</span>
@@ -34,10 +34,10 @@
 
                 <div class="d-none d-lg-flex align-items-center">
                     <a href="mailto:contact@skyhighadventures.com" class="btn me-2">
-                        <img src="/dsn1713-skyhighadventures/images/envelope-regular.png" alt="Contact" width="40" height="40">
+                        <img src="/dsn1713-skyhighadventures/images/envelope-regular.svg" alt="Contact" width="40" height="40">
                     </a>
                     <a href="#search" class="btn me-2">
-                        <img src="/dsn1713-skyhighadventures/images/magnifying-glass-solid.png" alt="Search" width="40" height="40">
+                        <img src="/dsn1713-skyhighadventures/images/magnifying-glass-solid.svg" alt="Search" width="40" height="40">
                     </a>
                     <button type="button" class="btn border-white text-white">BOOK NOW</button>
                 </div>
@@ -54,5 +54,19 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+      <div class="container">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="/dsn1713-skyhighadventures/images/bungee.jpg" class="d-block mx-lg-auto img-fluid" alt="Bungee Jumping" width="100%" height="100%" loading="lazy">
+          </div>
+          <div class="col-lg-6">
+            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Live on the edge with SkyHigh Adventures</h1>
+            <p class="lead">Experience the thrill of a lifetime with breathtaking views and adrenaline fueled activities</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <button type="button" class="btn btn-success btn-lg px-4 me-md-2">Explore Adventures</button>
+            </div>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
